<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">mobile_02</string>
    <string name="likes_count">You have %1$d likes!</string>
    <string name="increment">increment</string>
    <string name="decrement">decrement</string>
    <string name="yes">greeting</string>
    <string name="radio_label_down">Down</string>
    <string name="radio_label_up">Up</string>
    <string name="name">name</string>
    <string-array
        name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>
</resources>


